--- a/Pasteleria Home.html
+++ b/Pasteleria Home.html
@@ -11,6 +11,8 @@
 <body>
 
     <h1>Pasteleria chispita</h1>
+    <img src="https://raw.githubusercontent.com/TipiQss/FrontEnd-TipiQss-HTML/main/assets/Logo%20pasteleria%20chispitas.png"
+            alt="" width="120px" height="100px">
 
     <p>La mejor oasteleria de la zona haciendo pasteles desde que exiten los pasteles</p>
 
