--- a/Pasteleria Ordenes.html
+++ b/Pasteleria Ordenes.html
@@ -11,6 +11,8 @@
 <body>
     <!--Ordenes-->
     <h1>Pasteleria chispita</h1>
+    <img src="https://raw.githubusercontent.com/TipiQss/FrontEnd-TipiQss-HTML/main/assets/Logo%20pasteleria%20chispitas.png"
+            alt="" width="120px" height="100px">
     <div>
         <h2>Ordenes</h2>
         <label for="ordenes">De que la orden</label>
