--- a/Pasteleria Pedisos.html
+++ b/Pasteleria Pedisos.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>
-    <h1>Pedidos</h1>
     <h1>Pasteles al gusto</h1>
+    <img src="https://raw.githubusercontent.com/TipiQss/FrontEnd-TipiQss-HTML/main/assets/Logo%20pasteleria%20chispitas.png"
+            alt="" width="120px" height="100px">
 
     <h2> · PASTELES · ADORNOS</h2>
 
