mas ejemplos de orden

--- a/Pasteleria Ordenes.html
+++ b/Pasteleria Ordenes.html
@@ -17,7 +17,13 @@
         <h2>Ordenes</h2>
         <label for="ordenes">De que la orden</label>
         <select id="ordenes" name="ordenes">
-            <option value="orden1">Orden1</option>
+            <option value="orden1"> <table>
+                    <td>orden1</td>
+                    <td>- Fred</td>
+                    <td>- Vainilla</td>
+                    <td>- Bautizo</td>
+                    <td>- de un pisos</td>
+                </table></option>
             <option value="orden2">
                 <table>
                     <td>orden2</td>
@@ -27,9 +33,27 @@
                     <td>- de tres pisos</td>
                 </table>
             </option>
-            <option value="orden3">Orden3</option>
-            <option value="orden4">Orden4</option>
-            <option value="orden5">Orden5</option>
+            <option value="orden3"> <table>
+                    <td>orden3</td>
+                    <td>- Maria</td>
+                    <td>- Vainillas</td>
+                    <td>- letrero feliz cunpleaños</td>
+                    <td>- de 2 pisos</td>
+                </table></option>
+            <option value="orden4"> <table>
+                    <td>orden4</td>
+                    <td>- Adriana</td>
+                    <td>- Fresa</td>
+                    <td>- boda</td>
+                    <td>- de 5 pisos</td>
+                </table></option>
+            <option value="orden5"> <table>
+                    <td>orden5</td>
+                    <td>- Ysadi</td>
+                    <td>- cholate</td>
+                    <td>- letrero XV años</td>
+                    <td>- de 8 pisos</td>
+                </table></option>
 
         </select>
     </div>
